--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "license": "apache-2",
   "devDependencies": {
     "chai": "^3.5.0",
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-nyan-reporter": "^0.2.4",
     "mocha": "^3.2.0",
     "semistandard": "~9.1.0"
   }
