--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+install:
+  - sudo rm -f /usr/local/bin/firefox
+  - sudo apt-get update --fix-missing
+  - sudo apt-get install firefox
+  - firefox --version
 language: node_js
 node_js:
   - "6"
