--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ install:
   - sudo apt-get update --fix-missing
   - sudo apt-get install firefox
   - firefox --version
+  - npm install
 language: node_js
 node_js:
   - "6"
