--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run lint && karma start --single-run && npm run build",
     "watchTests": "karma start --reporters nyan",
-    "build": "uglifyjs src/*.js > index.min.js",
+    "build": "cat tools/pre.js tools/internal-scope.js src/*.js tools/post.js | uglifyjs > index.min.js",
     "lint": "semistandard src/*.js test/*.js",
     "format": "semistandard --fix src/*.js test/*.js"
   },
