--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "semistandard --fix src/*.js test/*.js"
   },
   "author": "",
-  "license": "apache-2",
+  "license": "Apache-2.0",
   "devDependencies": {
     "chai": "^3.5.0",
     "karma": "^1.3.0",
