--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "karma": "^1.3.0",
+    "chai": "^4.0.2",
+    "karma": "^1.7.0",
     "karma-chai": "^0.1.0",
-    "karma-firefox-launcher": "^1.0.0",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
-    "karma-nyan-reporter": "^0.2.4",
-    "mocha": "^3.2.0",
-    "semistandard": "~9.1.0",
-    "uglifyjs": "^2.4.10"
+    "karma-nyan-reporter": "^0.2.5",
+    "mocha": "^3.4.2",
+    "semistandard": "~11.0.0",
+    "uglify-js": "^3.0.15"
   },
   "repository": {
     "type": "git",
